<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.woact.ritter.calculator.MainActivity">

    <TextView
        android:id="@+id/txtAnswer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:singleLine="true"
        android:text="@string/btnNumber0"
        app:layout_constraintBottom_toTopOf="@+id/btnPluss"
        app:layout_constraintEnd_toStartOf="@id/txtInput"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="@string/btnNumber0"
        app:layout_constraintBottom_toTopOf="@+id/btnDivide"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPluss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnPluss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnMinus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMulti"
        app:layout_constraintStart_toEndOf="@id/btnPluss"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnMulti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"
        app:layout_constraintStart_toEndOf="@id/btnMinus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnDivide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMulti"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnNumber1"
        app:layout_constraintEnd_toStartOf="@id/btnNumber2"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPluss" />

    <Button
        android:id="@+id/btnNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnNumber2"
        app:layout_constraintEnd_toStartOf="@id/btnNumber3"
        app:layout_constraintStart_toEndOf="@id/btnNumber1"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btnNumber3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber3"
        app:layout_constraintEnd_toStartOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnNumber2"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber3"
        app:layout_constraintTop_toBottomOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnNumber4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber4"
        app:layout_constraintEnd_toStartOf="@id/btnNumber5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber1" />

    <Button
        android:id="@+id/btnNumber5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber5"
        app:layout_constraintEnd_toStartOf="@id/btnNumber6"
        app:layout_constraintStart_toEndOf="@id/btnNumber4"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber2" />

    <Button
        android:id="@+id/btnNumber6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber6"
        app:layout_constraintEnd_toStartOf="@id/btnSquare"
        app:layout_constraintStart_toEndOf="@id/btnNumber5"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber3" />

    <Button
        android:id="@+id/btnSquare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnSquare"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber6"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnNumber7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber7"
        app:layout_constraintEnd_toStartOf="@id/btnNumber8"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber4" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnReset"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNumber9"
        app:layout_constraintTop_toBottomOf="@+id/btnSquare" />

    <Button
        android:id="@+id/btnNumber8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber8"
        app:layout_constraintEnd_toStartOf="@id/btnNumber9"
        app:layout_constraintStart_toEndOf="@id/btnNumber7"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber5" />

    <Button
        android:id="@+id/btnNumber9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber9"
        app:layout_constraintEnd_toStartOf="@id/btnReset"
        app:layout_constraintStart_toEndOf="@id/btnNumber8"
        app:layout_constraintTop_toBottomOf="@+id/btnNumber6" />

    <Button
        android:id="@+id/btnRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnRoot"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNumber0"
        app:layout_constraintTop_toBottomOf="@id/btnNumber7" />

    <Button
        android:id="@+id/btnNumber0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnNumber0"
        app:layout_constraintStart_toEndOf="@id/btnRoot"
        app:layout_constraintEnd_toStartOf="@id/btnComma"
        app:layout_constraintTop_toBottomOf="@id/btnNumber8" />

    <Button
        android:id="@+id/btnComma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnComma"
        app:layout_constraintStart_toEndOf="@id/btnNumber0"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"
        app:layout_constraintTop_toBottomOf="@id/btnNumber9" />

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnEquals"
        app:layout_constraintStart_toEndOf="@id/btnComma"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnReset" />

    <TextView
        android:id="@+id/txtSign"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />
</android.support.constraint.ConstraintLayout>
